fix mobile nav layout issues

--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -2,6 +2,11 @@
 	display: none;
 }
 
+.mobile-nav-container {
+  background-color: #fd7e56;
+  margin-top: -18px;
+}
+
 .hidden-video-info {
   display:none;
 }
